[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menuprincipal.gd" type="Script" id=1]
[ext_resource path="res://Assets/Happy Lucky Free.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
resource_local_to_scene = true
use_filter = true
font_data = ExtResource( 2 )

[node name="Menuprincipal" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -199.0
margin_right = 114.0
margin_bottom = -119.0
rect_scale = Vector2( 2.28, 2.28 )
custom_constants/separation = 5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="VBoxContainer"]
margin_top = 2.0
margin_right = 94.0
margin_bottom = 24.0
focus_neighbour_top = NodePath("../Quit")
custom_fonts/font = SubResource( 1 )
text = "Start Game"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 29.0
margin_right = 94.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 2 )
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 94.0
margin_bottom = 78.0
focus_neighbour_bottom = NodePath("../Start")
custom_fonts/font = SubResource( 3 )
text = "Quit Game"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
